Fix image alignment show-post page

--- a/resources/css/post/show-post.scss
+++ b/resources/css/post/show-post.scss
@@ -102,6 +102,7 @@ section {
             display: flex;
             justify-content: center;
             align-items: center;
+            margin: 15px 0 0;
 
             img {
                 max-width: 100%;
